# optimized-memory-mcp-server

./: .aider.conf.yml  .gitignore  README.md  pyproject.toml  setup.py
.prompts/: module-organization-template.md  performance-optimization-template.md  tasks.md
memory_mcp_server/storage/sqlite/: manager.py
memory_mcp_server/storage/sqlite/operations/: entity_ops.py
memory_mcp_server/storage/sqlite/utils/: sanitization.py
memory_mcp_server/utils/: sanitization.py
optimized_memory_mcp_server/: interfaces.py  main.py
optimized_memory_mcp_server/api/: tools.py
optimized_memory_mcp_server/core/: __init__.py
optimized_memory_mcp_server/core/validation/: __init__.py  validators.py
optimized_memory_mcp_server/monitoring/: metrics.py
optimized_memory_mcp_server/storage/: base.py
optimized_memory_mcp_server/storage/sqlite/: cache.py  connection.py  maintenance.py  manager.py  operations.py  optimized_manager.py  schema.py
optimized_memory_mcp_server/storage/sqlite/operations/: __init__.py  ansible_ops.py  cloud_ops.py  conversation_ops.py  entity_ops.py  search_ops.py  (+3 more)
optimized_memory_mcp_server/tests/: __init__.py  conftest.py  test_memory_server.py
optimized_memory_mcp_server/tests/benchmarks/: __init__.py  test_query_benchmarks.py  test_temporal_benchmarks.py
optimized_memory_mcp_server/tests/unit/: test_cloud_operations.py  test_connection_pool.py  test_entity_operations.py  test_health_checks.py  test_metrics.py  test_relation_operations.py  test_search_operations.py  test_temporal_operations.py
optimized_memory_mcp_server/utils/: validation.py
(+6 files in other folders)
