[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "optimized-memory-mcp-server"
version = "0.1.0"
description = "Optimized Memory MCP Server"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=23.2.1",
    "mcp>=1.1.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
]

[tool.hatch.build.targets.wheel]
packages = ["optimized_memory_mcp_server"]
